# vcpkg_manifest_example_proj

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
cmake/: cppcheck.cmake  project_preamble.cmake  setup_sccache.cmake  static_analysis.cmake  warnings.cmake
